Deploy changes to Demo